# tidyhome-py

./: .gitignore  LICENSE  README.md  setup.cfg
src/tidyhome/: __init__.py  check_dictionaries.py  lookup.py  tidyhome.py
src/tidyhome/tests/: test_tidyhome.py
srctest/: append_src_tidyhome.py  test_tidyhome.py
