[metadata]
name = tidyhome
version = 1.0.0
author = Summit Consulting LLC
author_email =
description = Package for accessing CFPB U.S. home mortgage data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/summitllc/tidyhome-py
project_urls =
    Bug Tracker = https://github.com/summitllc/tidyhome-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas
    requests

[options.packages.find]
where = src
